# Enhancement-Ridge-relationship

./: readme.md
enhancementMethods/: CLAHE.m  SCIRD.m  adaptiveThresh.m  anIsotropicGaussianKernelEnhancement.m  contrastAdaptHistEq.m  fcnBPDFHE.m  gaussianSteerableFilters.m  globalThresh.m  hysteresisThresh.m  iuwt.m  localHistEq.m  localTensorVesselness.m  neuriteneesFilter.m  otsuThresh.m  pathOpening.m  phaseCongurency.m  phaseNeuritenessFilter.m  phaseVesselnessFilter.m  topHat.m  vesselness.m  vesselness2D.m  volumeRatio.m
lib/: Hessian2D.m  ICC.m  ShowResults.m  aGlineDetector.m  anaskel.mexa64  anovatwo.m  anovatwo2.m  beautifulSurface.m  beautifulSurface.m~  binarizeLineImage.m  components2orientations.m  createGaussianFilter.m  create_SCIRD_fb.m  directionalNMS.m  doubleRosinThr.m  eig2image.m  eigenDecompositionM2D.m  eigenMatrix2x2M.m  eigenSort2x2M.m  estimate_noise.m  findvarname.m  floodHysteresis.m  gaussian1D.m  gaussian2ndDerivatives.m  gaussianConvND.m  gaussianFilterN1D.m  gaussianN1D.m  gaussianSmooth.m  genaticCombo.m  gradient3D.m  gradient_magnitude.m  hermite1D.m  hessianMatrix2D.m  hessianVectorField.m  imsmooth.m  inplaceprod.mexw64  largestGradientMagnitudeoverscale.m  localTensor.m  localTensorConvolution.m  logGabor2D.m  (+13 more)
lib/RORPO2D/RORPO2D-src/: CMakeCache.txt  CMakeLists.txt  Makefile  RORPO2D  basic_operators.hpp  cmake_install.cmake  image.hpp  image_operations.hpp  image_png.hpp  main.cpp  po.hpp  rorpo.hpp  sort_functions.hpp
skeletonizationMethods/: afmmskel.m  edgeLindberg.m  morphSkeleton.m  shockGraphSkel.m  stegerSkel.m  (+4 more)
(+88 files in other folders)
